--- a/index.html
+++ b/index.html
@@ -7,9 +7,39 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-        <nav>
-            
+    <header class="header-container">
+        <nav class="nav-container">
+            <div class="nav-item logo">
+                <img src="" alt="apple image">
+            </div>
+            <div class="nav-item">
+                <a href="#" >Store</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" >Mac</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" >iPod</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" >iPhone</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" >iPad</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" >iTunes</a>
+            </div>
+            <div class="nav-item">
+                <a href="#" >Support</a>
+            </div>
+            <div class="nav-item form-item">
+                <form action="#" method="post">
+                    <div class="nav-item">
+                        <input type="text" name="search">
+                    </div> 
+                </form>
+            </div>
         </nav>
     </header>
     <section>
