Added the main background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header class="header-container">
         <nav class="nav-container">
             <div class="nav-item logo">
-                <img src="" alt="apple image">
             </div>
             <div class="nav-item">
                 <a href="#" >Store</a>
@@ -42,8 +41,30 @@
             </div>
         </nav>
     </header>
-    <section>
-
+    <section class="image-container">
+        <img src="images/promo_iphone5s.jpg" alt="iphone 5s">
+        <img src="images/promo_iphone5c.jpg" alt="iphone 5c">
+        <img src="images/promo_30_years.jpg" alt="30 years promo">
+        <img src="images/promo_supplier_responsibility.jpg" alt="suppliers">
     </section>
+    <section class="links-container">
+        <span class="text-links">
+            Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, 
+            or find a <a href="#">reseller</a>.
+        </span>
+        <ul class="foooter-links">
+            <a href="#">Site Map |</a>
+            <a href="#"> Hot News |</a>
+            <a href="#"> RSS Feeds |</a>
+            <a href="#"> Media Info |</a>
+            <a href="#"> Environment |</a>
+            <a href="#"> Job Opportunities |</a>
+            <a href="#"> Contact Us | </a>
+        </ul>
+        <span class="img-container"><img src="images/usa.png" alt="usa flag"></span>
+    </section>
+    <footer class="footer-container">
+        <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
+    </footer>
 </body>
 </html>
