added text fils

--- a/index.html
+++ b/index.html
@@ -40,12 +40,17 @@
                 </form>
             </div>
         </nav>
+        <section class="text-fields"> 
+            <h1>What will your verse be?</h1>
+            <p>Everyone has something to share. See how people are using iPad in their unique ways to add to the world's Story  </p>
+        </section>
+
     </header>
     <section class="image-container">
-        <img src="images/promo_iphone5s.jpg" alt="iphone 5s">
-        <img src="images/promo_iphone5c.jpg" alt="iphone 5c">
-        <img src="images/promo_30_years.jpg" alt="30 years promo">
-        <img src="images/promo_supplier_responsibility.jpg" alt="suppliers">
+        <div class="img1"></div>
+        <div class="img2"></div>
+        <div class="img3"></div>
+        <div class="img4"></div>
     </section>
     <section class="links-container">
         <span class="text-links">
