Arranged section image as css background image, made images as links, clean some codes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="nav-item">
                 <a href="#" >Support</a>
             </div>
-            <div class="nav-item form-item">
+            <div id="form-item" class="nav-item">
                 <form action="#" method="post">
                     <div class="nav-item">
                         <input type="text" name="search">
@@ -41,8 +41,9 @@
             </div>
         </nav>
         <section class="text-fields"> 
-            <h1>What will your verse be?</h1>
-            <p>Everyone has something to share. See how people are using iPad in their unique ways to add to the world's Story  </p>
+            <p class="p-header"><img src="images/your_verse_title_medium.png" alt="e"></p>
+            <p class="p-text"><img src="images/everyone.png" alt="x"></p>
+            <a href="#"><div class="p-footer"><div class="up">Watch the "Your Verse" and explore the stories</div><div class="down"><img src="images/play.png" alt="play button"></div></div></a>
         </section>
 
     </header>
