If commit is approved, it will fix the navbar hover effect

--- a/index.html
+++ b/index.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Apple Product Exhibition</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-    <header class="header-container">
-        <nav class="nav-container">
-            <div class="nav-item logo">
-            </div>
-            <div class="nav-item">
-                <a href="#" >Store</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" >Mac</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" >iPod</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" >iPhone</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" >iPad</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" >iTunes</a>
-            </div>
-            <div class="nav-item">
-                <a href="#" >Support</a>
-            </div>
-            <div id="form-item" class="nav-item">
-                <form action="#" method="post">
-                    <div class="nav-item">
-                        <input type="text" name="search">
-                    </div> 
-                </form>
-            </div>
-        </nav>
-        <section class="text-fields"> 
-            <p class="p-header"><img src="images/your_verse_title_medium.png" alt="e"></p>
-            <p class="p-text"><img src="images/everyone.png" alt="x"></p>
-            <a href="#"><div class="p-footer"><div class="up">Watch the "Your Verse" and explore the stories</div><div class="down"><img src="images/play.png" alt="play button"></div></div></a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+        <title>Apple Product Exhibition</title>
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <header class="header-container">
+            <nav class="nav-container">
+                <div class="nav-item logo"></div>
+                <div class="nav-item">
+                    <a href="#">Store</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#">Mac</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#">iPod</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#">iPhone</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#">iPad</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#">iTunes</a>
+                </div>
+                <div class="nav-item">
+                    <a href="#">Support</a>
+                </div>
+                <div id="form-item" class="nav-items">
+                    <form action="#" method="post">
+                        <input type="text" name="search" />
+                    </form>
+                    <div class="search-icon"></div>
+                </div>
+            </nav>
+            <section class="text-fields">
+                <p class="p-header"><img src="images/your_verse_title_medium.png" alt="e" /></p>
+                <p class="p-text"><img src="images/everyone.png" alt="x" /></p>
+                <a href="#">
+                    <div class="p-footer">
+                        <div class="up">Watch the "Your Verse" and explore the stories</div>
+                        <div class="down"><img src="images/play.png" alt="play button" /></div>
+                    </div>
+                </a>
+            </section>
+        </header>
+        <section class="image-container">
+            <div class="img1"></div>
+            <div class="img2"></div>
+            <div class="img3"></div>
+            <div class="img4"></div>
         </section>
-
-    </header>
-    <section class="image-container">
-        <div class="img1"></div>
-        <div class="img2"></div>
-        <div class="img3"></div>
-        <div class="img4"></div>
-    </section>
-    <section class="links-container">
-        <span class="text-links">
-            Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, 
-            or find a <a href="#">reseller</a>.
-        </span>
-        <ul class="foooter-links">
-            <a href="#">Site Map |</a>
-            <a href="#"> Hot News |</a>
-            <a href="#"> RSS Feeds |</a>
-            <a href="#"> Media Info |</a>
-            <a href="#"> Environment |</a>
-            <a href="#"> Job Opportunities |</a>
-            <a href="#"> Contact Us | </a>
-        </ul>
-        <span class="img-container"><img src="images/usa.png" alt="usa flag"></span>
-    </section>
-    <footer class="footer-container">
-        <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
-    </footer>
-</body>
+        <section class="links-container">
+            <span class="text-links"> Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>. </span>
+            <ul class="foooter-links">
+                <a href="#">Site Map |</a>
+                <a href="#"> Hot News |</a>
+                <a href="#"> RSS Feeds |</a>
+                <a href="#"> Media Info |</a>
+                <a href="#"> Environment |</a>
+                <a href="#"> Job Opportunities |</a>
+                <a href="#"> Contact Us | </a>
+            </ul>
+            <span class="img-container"><img src="images/usa.png" alt="usa flag" /></span>
+        </section>
+        <footer class="footer-container">
+            <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
+        </footer>
+    </body>
 </html>
