added li to the ul items

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         </section>
         <section class="links-container">
             <span class="text-links"> Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>. </span>
-            <ul class="foooter-links">
-                <a href="#">Site Map |</a>
-                <a href="#"> Hot News |</a>
-                <a href="#"> RSS Feeds |</a>
-                <a href="#"> Media Info |</a>
-                <a href="#"> Environment |</a>
-                <a href="#"> Job Opportunities |</a>
-                <a href="#"> Contact Us | </a>
+            <ul class="footer-links">
+                <li><a href="#">Site Map |</a></li>
+                <li><a href="#"> Hot News |</a></li>
+                <li><a href="#"> RSS Feeds |</a></li>
+                <li><a href="#"> Media Info |</a></li>
+                <li><a href="#"> Environment |</a></li>
+                <li><a href="#"> Job Opportunities |</a></li>
+                <li><a href="#"> Contact Us | </a></li>
             </ul>
             <span class="img-container"><img src="images/usa.png" alt="usa flag" /></span>
         </section>
