Fix html error found by linters

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="search-icon"></div>
                 </div>
             </nav>
-            <section class="text-fields">
+            <div class="text-fields">
                 <p class="p-header"><img src="images/your_verse_title_medium.png" alt="e" /></p>
                 <p class="p-text"><img src="images/everyone.png" alt="x" /></p>
                 <a href="#">
@@ -47,29 +47,29 @@
                         <div class="down"><img src="images/play.png" alt="play button" /></div>
                     </div>
                 </a>
-            </section>
+            </div>
         </header>
-        <section class="image-container">
+        <div class="image-container">
             <div class="img1"></div>
             <div class="img2"></div>
             <div class="img3"></div>
             <div class="img4"></div>
-        </section>
-        <section class="links-container">
+        </div>
+        <div class="links-container">
             <span class="text-links"> Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>. </span>
             <ul class="footer-links">
-                <li><a href="#">Site Map |</a></li>
-                <li><a href="#"> Hot News |</a></li>
-                <li><a href="#"> RSS Feeds |</a></li>
-                <li><a href="#"> Media Info |</a></li>
-                <li><a href="#"> Environment |</a></li>
-                <li><a href="#"> Job Opportunities |</a></li>
-                <li><a href="#"> Contact Us | </a></li>
+                <li><a href="#">Site Map &nbsp;</a></li>
+                <li><a href="#"> |&nbsp; Hot News &nbsp;</a></li>
+                <li><a href="#"> |&nbsp; RSS Feeds &nbsp;</a></li>
+                <li><a href="#">|&nbsp; Media Info &nbsp;</a></li>
+                <li><a href="#">|&nbsp; Environment &nbsp;</a></li>
+                <li><a href="#">|&nbsp; Job Opportunities&nbsp;</a></li>
+                <li><a href="#">|&nbsp; Contact Us |&nbsp;</a></li>
             </ul>
             <span class="img-container"><img src="images/usa.png" alt="usa flag" /></span>
-        </section>
+        </div>
         <footer class="footer-container">
-            <p>Copyright © 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
+            <p>Copyright &copy; 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
         </footer>
     </body>
 </html>
