Added the background of the nav using gradient, made the background image to cover whole page, added main tag and added the stylelint files as required. Also created a seperate file for reset.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <title>Apple Product Exhibition</title>
+        <link href="css/reset.css" rel="stylesheet" type="text/css" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
@@ -49,12 +50,12 @@
                 </a>
             </div>
         </header>
-        <div class="image-container">
+        <main class="image-container">
             <div class="img1"></div>
             <div class="img2"></div>
             <div class="img3"></div>
             <div class="img4"></div>
-        </div>
+        </main>
         <div class="links-container">
             <span class="text-links"> Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>. </span>
             <ul class="footer-links">
