--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Apple Product Exhibition</title>
         <link href="css/reset.css" rel="stylesheet" type="text/css" />
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <script src="https://kit.fontawesome.com/cbdf2b0f0e.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header class="header-container">
@@ -34,9 +35,10 @@
                 </div>
                 <div id="form-item" class="nav-items">
                     <form action="#" method="post">
+                        <button class="search-button"><img src="images/search.PNG" alt="search"></button>
                         <input type="text" name="search" />
                     </form>
-                    <div class="search-icon"></div>
+                    <!-- <div class="search-icon"></div> -->
                 </div>
             </nav>
             <div class="text-fields">
