Redudce the distances and remove the spaces and made the background to take the whole screen width

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             </div>
         </header>
         <main class="image-container">
-            <div class="img1"></div>
-            <div class="img2"></div>
-            <div class="img3"></div>
-            <div class="img4"></div>
+            <a href="#"><div class="img1"></div></a>
+            <a href="#"><div class="img2"></div></a>
+            <a href="#"><div class="img3"></div></a>
+            <a href="#"><div class="img4"></div></a>
         </main>
         <div class="links-container">
             <span class="text-links"> Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>. </span>
@@ -68,7 +68,7 @@
                 <li><a href="#">|&nbsp; Job Opportunities&nbsp;</a></li>
                 <li><a href="#">|&nbsp; Contact Us |&nbsp;</a></li>
             </ul>
-            <span class="img-container"><img src="images/usa.png" alt="usa flag" /></span>
+            <span class="img-container"><a href="#"><img src="images/usa.png" alt="usa flag" /></a></span>
         </div>
         <footer class="footer-container">
             <p>Copyright &copy; 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
