Adjustment has been made on the images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <script src="https://kit.fontawesome.com/cbdf2b0f0e.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="background">
+
+        
         <header class="header-container">
             <nav class="nav-container">
                 <div class="nav-item logo"></div>
@@ -41,8 +44,10 @@
                 </div>
             </nav>
             <div class="text-fields">
-                <p class="p-header"><img src="images/your_verse_title_medium.png" alt="e" /></p>
-                <p class="p-text"><img src="images/everyone.png" alt="x" /></p>
+                <p class="p-header">What will your verse be?</p>
+                <p class="p-text">Everyone has something unique to share. See how people are using iPad in their 
+                    unique ways to add the world's story.
+                </p>
                 <a href="#">
                     <div class="p-footer">
                         <div class="up">Watch the "Your Verse" and explore the stories</div>
@@ -57,7 +62,7 @@
             <a href="#"><div class="img3"></div></a>
             <a href="#"><div class="img4"></div></a>
         </main>
-        <div class="links-container">
+        <aside class="links-container">
             <span class="text-links"> Shop the <a href="#">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="#">Apple Retail Store</a>, or find a <a href="#">reseller</a>. </span>
             <ul class="footer-links">
                 <li><a href="#">Site Map &nbsp;</a></li>
@@ -69,9 +74,10 @@
                 <li><a href="#">|&nbsp; Contact Us |&nbsp;</a></li>
             </ul>
             <span class="img-container"><a href="#"><img src="images/usa.png" alt="usa flag" /></a></span>
-        </div>
+        </aside>
         <footer class="footer-container">
             <p>Copyright &copy; 2014 Apple Inc. All rights reserved. <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></p>
         </footer>
+    </div>
     </body>
 </html>
